// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover renders 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      offset={10}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders with PopoverContent 1`] = `
<Popover
  content={
    <ForwardRef(withForwardedRef(PopoverContent))
      style={
        Object {
          "zIndex": "9999",
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  }
  isOpen={false}
  onClose={[MockFunction]}
  onOpen={[MockFunction]}
  trigger={
    <div>
      Trigger
    </div>
  }
>
  <span>
    <ForwardRef(withForwardedRef(ButtonA11y))
      aria-controls="mockId"
      aria-expanded={false}
      aria-haspopup={true}
      aria-owns="mockId"
      element="div"
      onClick={[Function]}
    >
      <ButtonA11y
        aria-controls="mockId"
        aria-expanded={false}
        aria-haspopup={true}
        aria-owns="mockId"
        element="div"
        forwardedRef={
          Object {
            "current": <div
              aria-controls="mockId"
              aria-expanded="false"
              aria-haspopup="true"
              aria-owns="mockId"
              role="button"
              tabindex="0"
            >
              Trigger
            </div>,
          }
        }
        onClick={[Function]}
        onKeyDown={[Function]}
        strictMode={true}
      >
        <div
          aria-controls="mockId"
          aria-expanded={false}
          aria-haspopup={true}
          aria-owns="mockId"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          Trigger
        </div>
      </ButtonA11y>
    </ForwardRef(withForwardedRef(ButtonA11y))>
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="true"
            id="mockId"
            role="dialog"
            style="z-index: 9999; position: absolute; top: 0px; left: 0px; opacity: 0; visibility: hidden;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </div>
      }
    >
      <ForwardRef(withForwardedRef(PopoverContent))
        id="mockId"
        isOpen={false}
        style={
          Object {
            "zIndex": "9999",
          }
        }
        triggerRect={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
      >
        <PopoverContent
          forwardedRef={
            Object {
              "current": <div
                aria-hidden="true"
                id="mockId"
                role="dialog"
                style="z-index: 9999; position: absolute; top: 0px; left: 0px; opacity: 0; visibility: hidden;"
                tabindex="-1"
              >
                <div>
                  This is some content
                </div>
              </div>,
            }
          }
          id="mockId"
          isOpen={false}
          style={
            Object {
              "zIndex": "9999",
            }
          }
          triggerRect={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-hidden={true}
            id="mockId"
            role="dialog"
            style={
              Object {
                "left": "0",
                "opacity": "0",
                "position": "absolute",
                "top": "0",
                "visibility": "hidden",
                "zIndex": "9999",
              }
            }
            tabIndex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </PopoverContent>
      </ForwardRef(withForwardedRef(PopoverContent))>
    </Portal>
  </span>
</Popover>
`;

exports[`Popover renders with PopoverContent, open 1`] = `
<Popover
  content={
    <ForwardRef(withForwardedRef(PopoverContent))
      style={
        Object {
          "zIndex": "9999",
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  }
  isOpen={true}
  onClose={[MockFunction]}
  onOpen={[MockFunction]}
  trigger={
    <div>
      Trigger
    </div>
  }
>
  <span>
    <ForwardRef(withForwardedRef(ButtonA11y))
      aria-controls="mockId"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="mockId"
      element="div"
      onClick={[Function]}
    >
      <ButtonA11y
        aria-controls="mockId"
        aria-expanded={true}
        aria-haspopup={true}
        aria-owns="mockId"
        element="div"
        forwardedRef={
          Object {
            "current": <div
              aria-controls="mockId"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="mockId"
              role="button"
              tabindex="0"
            >
              Trigger
            </div>,
          }
        }
        onClick={[Function]}
        onKeyDown={[Function]}
        strictMode={true}
      >
        <div
          aria-controls="mockId"
          aria-expanded={true}
          aria-haspopup={true}
          aria-owns="mockId"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          Trigger
        </div>
      </ButtonA11y>
    </ForwardRef(withForwardedRef(ButtonA11y))>
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="false"
            id="mockId"
            role="dialog"
            style="z-index: 9999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </div>
      }
    >
      <ForwardRef(withForwardedRef(PopoverContent))
        id="mockId"
        isOpen={true}
        style={
          Object {
            "zIndex": "9999",
          }
        }
        triggerRect={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
      >
        <PopoverContent
          forwardedRef={
            Object {
              "current": <div
                aria-hidden="false"
                id="mockId"
                role="dialog"
                style="z-index: 9999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
                tabindex="-1"
              >
                <div>
                  This is some content
                </div>
              </div>,
            }
          }
          id="mockId"
          isOpen={true}
          style={
            Object {
              "zIndex": "9999",
            }
          }
          triggerRect={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-hidden={false}
            id="mockId"
            role="dialog"
            style={
              Object {
                "left": "0px",
                "opacity": "1",
                "position": "absolute",
                "top": "calc(0px + 0px)",
                "visibility": "visible",
                "zIndex": "9999",
              }
            }
            tabIndex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </PopoverContent>
      </ForwardRef(withForwardedRef(PopoverContent))>
    </Portal>
  </span>
</Popover>
`;

exports[`Popover renders with actual button for trigger 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="button"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      style={
        Object {
          "zIndex": "9999",
        }
      }
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, bottom 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={false}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, bottom left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={false}
      left={true}
      offset={10}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, bottom right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={false}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      left={true}
      offset={10}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & bottom 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={true}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & bottom left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={true}
      left={true}
      offset={10}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & bottom right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      bottom={true}
      id="mockId"
      isOpen={true}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={true}
      left={true}
      offset={10}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={true}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & top 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={true}
      offset={10}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & top left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={true}
      left={true}
      offset={10}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open & top right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={true}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={true}
      offset={10}
      right={true}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, open 1`] = `
<Popover
  content={
    <div>
      This is some content
    </div>
  }
  isOpen={true}
  offset={10}
  onClose={[MockFunction]}
  onOpen={[MockFunction]}
  trigger={
    <div>
      Trigger
    </div>
  }
>
  <span>
    <ForwardRef(withForwardedRef(ButtonA11y))
      aria-controls="mockId"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="mockId"
      element="div"
      onClick={[Function]}
    >
      <ButtonA11y
        aria-controls="mockId"
        aria-expanded={true}
        aria-haspopup={true}
        aria-owns="mockId"
        element="div"
        forwardedRef={
          Object {
            "current": <div
              aria-controls="mockId"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="mockId"
              role="button"
              tabindex="0"
            >
              Trigger
            </div>,
          }
        }
        onClick={[Function]}
        onKeyDown={[Function]}
        strictMode={true}
      >
        <div
          aria-controls="mockId"
          aria-expanded={true}
          aria-haspopup={true}
          aria-owns="mockId"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          Trigger
        </div>
      </ButtonA11y>
    </ForwardRef(withForwardedRef(ButtonA11y))>
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="false"
            id="mockId"
            role="dialog"
            style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </div>
      }
    >
      <ForwardRef(withForwardedRef(PopoverContent))
        id="mockId"
        isOpen={true}
        offset={10}
        triggerRect={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
      >
        <PopoverContent
          forwardedRef={
            Object {
              "current": <div
                aria-hidden="false"
                id="mockId"
                role="dialog"
                style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
                tabindex="-1"
              >
                <div>
                  This is some content
                </div>
              </div>,
            }
          }
          id="mockId"
          isOpen={true}
          offset={10}
          triggerRect={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-hidden={false}
            id="mockId"
            role="dialog"
            style={
              Object {
                "left": "0px",
                "opacity": "1",
                "position": "absolute",
                "top": "calc(0px + 10px)",
                "visibility": "visible",
                "zIndex": "999",
              }
            }
            tabIndex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </PopoverContent>
      </ForwardRef(withForwardedRef(PopoverContent))>
    </Portal>
  </span>
</Popover>
`;

exports[`Popover renders, open with NO offset 1`] = `
<Popover
  content={
    <div>
      This is some content
    </div>
  }
  isOpen={true}
  onClose={[MockFunction]}
  onOpen={[MockFunction]}
  trigger={
    <div>
      Trigger
    </div>
  }
>
  <span>
    <ForwardRef(withForwardedRef(ButtonA11y))
      aria-controls="mockId"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="mockId"
      element="div"
      onClick={[Function]}
    >
      <ButtonA11y
        aria-controls="mockId"
        aria-expanded={true}
        aria-haspopup={true}
        aria-owns="mockId"
        element="div"
        forwardedRef={
          Object {
            "current": <div
              aria-controls="mockId"
              aria-expanded="true"
              aria-haspopup="true"
              aria-owns="mockId"
              role="button"
              tabindex="0"
            >
              Trigger
            </div>,
          }
        }
        onClick={[Function]}
        onKeyDown={[Function]}
        strictMode={true}
      >
        <div
          aria-controls="mockId"
          aria-expanded={true}
          aria-haspopup={true}
          aria-owns="mockId"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        >
          Trigger
        </div>
      </ButtonA11y>
    </ForwardRef(withForwardedRef(ButtonA11y))>
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="false"
            id="mockId"
            role="dialog"
            style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </div>
      }
    >
      <ForwardRef(withForwardedRef(PopoverContent))
        id="mockId"
        isOpen={true}
        triggerRect={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
      >
        <PopoverContent
          forwardedRef={
            Object {
              "current": <div
                aria-hidden="false"
                id="mockId"
                role="dialog"
                style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
                tabindex="-1"
              >
                <div>
                  This is some content
                </div>
              </div>,
            }
          }
          id="mockId"
          isOpen={true}
          triggerRect={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-hidden={false}
            id="mockId"
            role="dialog"
            style={
              Object {
                "left": "0px",
                "opacity": "1",
                "position": "absolute",
                "top": "calc(0px + 0px)",
                "visibility": "visible",
                "zIndex": "999",
              }
            }
            tabIndex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </PopoverContent>
      </ForwardRef(withForwardedRef(PopoverContent))>
    </Portal>
  </span>
</Popover>
`;

exports[`Popover renders, open with label 1`] = `
<Popover
  content={
    <div>
      This is some content
    </div>
  }
  isOpen={true}
  label="Click me"
  offset={10}
  onClose={[MockFunction]}
  onOpen={[MockFunction]}
  trigger={<div />}
>
  <span>
    <ForwardRef(withForwardedRef(ButtonA11y))
      aria-controls="mockId"
      aria-expanded={true}
      aria-haspopup={true}
      aria-label="Click me"
      aria-owns="mockId"
      element="div"
      onClick={[Function]}
    >
      <ButtonA11y
        aria-controls="mockId"
        aria-expanded={true}
        aria-haspopup={true}
        aria-label="Click me"
        aria-owns="mockId"
        element="div"
        forwardedRef={
          Object {
            "current": <div
              aria-controls="mockId"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Click me"
              aria-owns="mockId"
              role="button"
              tabindex="0"
            />,
          }
        }
        onClick={[Function]}
        onKeyDown={[Function]}
        strictMode={true}
      >
        <div
          aria-controls="mockId"
          aria-expanded={true}
          aria-haspopup={true}
          aria-label="Click me"
          aria-owns="mockId"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex="0"
        />
      </ButtonA11y>
    </ForwardRef(withForwardedRef(ButtonA11y))>
    <Portal
      containerInfo={
        <div>
          <div
            aria-hidden="false"
            aria-label="Click me"
            id="mockId"
            role="dialog"
            style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
            tabindex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </div>
      }
    >
      <ForwardRef(withForwardedRef(PopoverContent))
        id="mockId"
        isOpen={true}
        label="Click me"
        offset={10}
        triggerRect={
          Object {
            "height": 0,
            "left": 0,
            "top": 0,
            "width": 0,
          }
        }
      >
        <PopoverContent
          forwardedRef={
            Object {
              "current": <div
                aria-hidden="false"
                aria-label="Click me"
                id="mockId"
                role="dialog"
                style="z-index: 999; position: absolute; left: 0px; opacity: 1; visibility: visible;"
                tabindex="-1"
              >
                <div>
                  This is some content
                </div>
              </div>,
            }
          }
          id="mockId"
          isOpen={true}
          label="Click me"
          offset={10}
          triggerRect={
            Object {
              "height": 0,
              "left": 0,
              "top": 0,
              "width": 0,
            }
          }
        >
          <div
            aria-hidden={false}
            aria-label="Click me"
            id="mockId"
            role="dialog"
            style={
              Object {
                "left": "0px",
                "opacity": "1",
                "position": "absolute",
                "top": "calc(0px + 10px)",
                "visibility": "visible",
                "zIndex": "999",
              }
            }
            tabIndex="-1"
          >
            <div>
              This is some content
            </div>
          </div>
        </PopoverContent>
      </ForwardRef(withForwardedRef(PopoverContent))>
    </Portal>
  </span>
</Popover>
`;

exports[`Popover renders, right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      offset={10}
      right={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, top 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      offset={10}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, top left 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      left={true}
      offset={10}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;

exports[`Popover renders, top right 1`] = `
<span>
  <Memo([object Object])
    aria-controls="mockId"
    aria-expanded={false}
    aria-haspopup={true}
    aria-owns="mockId"
    element="div"
    onClick={[Function]}
  >
    Trigger
  </Memo([object Object])>
  <Portal
    containerInfo={<div />}
  >
    <ForwardRef(withForwardedRef(PopoverContent))
      id="mockId"
      isOpen={false}
      offset={10}
      right={true}
      top={true}
      triggerRect={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <div>
        This is some content
      </div>
    </ForwardRef(withForwardedRef(PopoverContent))>
  </Portal>
</span>
`;
